--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -15,12 +15,12 @@
         </div>
         <div>
           <label class="text-sm mb-2 block">Email Id</label>
-          <input name="email" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter email" />
+          <input name="email" type="text" formControlName="email" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter email" />
         </div>
         
           <div>
             <label class="text-sm mb-2 block">Blood Group</label>
-            <select name="bloodGroup" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500">
+            <select name="bloodGroup" formControlName="bloodGroup" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500">
               <option value="">Select Blood Group</option>
               <option value="A+">A+</option>
               <option value="A-">A-</option>
@@ -34,52 +34,52 @@
           </div>
         <div>
           <label class="text-sm mb-2 block">Password</label>
-          <input name="password" type="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter password" />
+          <input name="password" type="password" formControlName="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter password" />
         </div>
         <div>
           <label class="text-sm mb-2 block">Confirm Password</label>
-          <input name="cpassword" type="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter confirm password" />
+          <input name="cpassword" type="password" formControlName="confirmPassword" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter confirm password" />
         </div>
         <div>
             <label class="text-sm mb-2 block">DOB</label>
-            <input name="name" type="date" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Date of birth" />
+            <input name="name" type="date" formControlName="dob" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Date of birth" />
           </div>
           <div>
             <label class="text-sm mb-2 block">House Name</label>
-            <input name="lname" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter house name" />
+            <input name="lname" type="text" formControlName="houseName" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter house name" />
           </div>
           <div>
             <label class="text-sm mb-2 block">City</label>
-            <input name="email" type="text" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter city" />
+            <input name="email" type="text" formControlName="city" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter city" />
           </div>
           <div>
             <label class="text-sm mb-2 block">Last Donated Date</label>
-            <input name="cpassword" type="date" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Last donated date" />
+            <input name="cpassword" type="date" formControlName="lastd_date" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Last donated date" />
           </div>
           <div>
             <label class="text-sm mb-2 block">District</label>
-            <input name="number" type="number" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter district" />
+            <input name="number" type="number" formControlName="district" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter district" />
           </div>
           <div>
             <label class="text-sm mb-2 block">State</label>
-            <input name="password" type="password" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter state" />
+            <input name="password" type="password" formControlName="state" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter state" />
           </div>
           <div>
             <label class="text-sm mb-2 block">Pin</label>
-            <input name="cpassword" type="number" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter pin" />
+            <input name="cpassword" type="number" formControlName="pin" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter pin" />
           </div>
           <div>
             <label class="text-sm mb-2 block">Gender</label>
-            <div class="flex items-center gap-3"> <div>
-                <input type="radio" id="male" name="gender" value="male" class="outline-blue-500"> 
+            <div class="flex items-center gap-3"><div>
+                <input type="radio" id="male" formControlName="gender" name="gender" value="male" class="outline-blue-500"> 
                 <label for="male" class="text-sm">Male</label>
               </div>
               <div>
-                <input type="radio" id="female" name="gender" value="female" class="outline-blue-500">
+                <input type="radio" id="female" formControlName="gender" name="gender" value="female" class="outline-blue-500">
                 <label for="female" class="text-sm">Female</label>
               </div>
               <div>
-                <input type="radio" id="other" name="gender" value="other" class="outline-blue-500">
+                <input type="radio" id="other" formControlName="gender" name="gender" value="other" class="outline-blue-500">
                 <label for="other" class="text-sm">Other</label>
               </div>
             </div>
