user signup completed

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -54,15 +54,15 @@
           </div>
           <div>
             <label class="text-sm mb-2 block">Last Donated Date</label>
-            <input name="cpassword" type="date" formControlName="lastd_date" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Last donated date" />
+            <input name="Lastdate" type="date" formControlName="lastd_date" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter Last donated date" />
           </div>
           <div>
             <label class="text-sm mb-2 block">District</label>
-            <input name="number" type="number" formControlName="district" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter district" />
+            <input name="number" type="text" formControlName="district" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter district" />
           </div>
           <div>
             <label class="text-sm mb-2 block">State</label>
-            <input name="password" type="password" formControlName="state" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter state" />
+            <input name="password" type="text" formControlName="state" class="bg-gray-100 w-full text-sm px-4 py-3.5 rounded-md outline-blue-500" placeholder="Enter state" />
           </div>
           <div>
             <label class="text-sm mb-2 block">Pin</label>
